tests/ui/mixed_numbers.stderr
Error [E0109]: `+` can't mix Int (a whole number) and Float (a decimal number)
  --> tests/ui/mixed_numbers.jet:2:13
    |
  2 |     val x = 1 + 2.5;
    |             ^^^^^^^
 Why: Jet never converts numbers silently; the two sides must match
 Fix: make both sides the same kind of number (write `2.0` instead of `2`, or drop the `.0`)
